[gd_scene format=3 uid="uid://main_menu_scene"]

[ext_resource type="Script" uid="uid://main_menu_script" path="res://scripts/main_menu.gd" id="1_menu"]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_menu")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
theme_override_constants/separation = 24

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
text = "考古探掘"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 64

[node name="SubtitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
text = "Archaeology Dig"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 26

[node name="CurrencyLabel" type="Label" parent="CenterContainer/VBoxContainer"]
text = "货币：0"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 22

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(260, 60)
text = "开始游戏"
theme_override_font_sizes/font_size = 26

[node name="MuseumButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(260, 60)
text = "博物馆"
theme_override_font_sizes/font_size = 26

[node name="ShopButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(260, 60)
text = "商店"
theme_override_font_sizes/font_size = 26

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(260, 60)
text = "退出"
theme_override_font_sizes/font_size = 26
